--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -21,6 +21,8 @@ if(! file.exists(fig.dir)){
     dir.create(fig.dir, recursive = TRUE)
 }
 
+out.dir = here("data", "RDS", "PCAWG", "10_onco_pathways")
+
 source(here("R/load_packages.R"))
 ```
 
@@ -36,6 +38,48 @@ PCAWG.full.subset.ann = readRDS(here("data", "RDS", "PCAWG", "signatures",
 
 PCAWG.active.sig.counts = data.frame(Tissues = PCAWG.full.subset.ann$Cancer.Types,
                                       active.sig.counts = rowSums(PCAWG.full.subset.ann[4:ncol(PCAWG.full.subset.ann)] > 0))
+```
+
+### Getting the quantiles 
+
+```{r}
+get_quants_from_null = function(null.list, sigs, paths, quant.lim) {
+
+    out.list = list()
+    
+    for (tissue in names(null.list)) {
+        
+        
+        tissue.elems = get_tissue_pathway_activities(tissue, sigs, paths)
+        
+        zero.mat = matrix(0, ncol = ncol(tissue.elems$paths),
+                          nrow = ncol(tissue.elems$sigs),
+                          dimnames = list(colnames(tissue.elems$sigs), 
+                                          sub("-", ".", sub(" ", ".", colnames(tissue.elems$paths) ) ) ) )
+        
+        quantiles.mat = do.call(rbind, 
+                                lapply(null.list[[tissue]], function(x) {
+                                    if(length(x) == 0) {
+                                        return(as.vector(zero.mat))
+                                    } else {
+                                        out = zero.mat
+                                        out[rownames(x),colnames(x)] = out[rownames(x),colnames(x)] +
+                                            as.matrix(x)
+                                        return(as.vector(unlist(out)))
+                                    }
+                                    
+                                }
+                                ) )
+        quants = apply(quantiles.mat, MARGIN = 2, function(x)
+            quantile(abs(x), probs = quant.lim))    
+        
+        out = zero.mat + matrix(quants, nrow = nrow(zero.mat), ncol = ncol(zero.mat))
+        
+        out.list[[tissue]] = out
+    }
+    return(out.list)
+}
+
 ```
 
 
@@ -248,54 +292,28 @@ for (tissue in names(tissue.odds.ratio)) {
 }
 ```
 
+### Setting the null model for the OR
 
 ```{r, echo = FALSE, include=FALSE}
-tissue.odds.ratios.null = sig_pathway_int_null(sigs.input = PCAWG.full.subset.ann.pathways,
-                                 pathways.input = PCAWG.pathways.tissues,
-                                 interaction_function = get_sig_path_assocs, 
-                                 path.min.tissues = 30,
-                                 p.val.threshold = 0.05,
-                                 p.adjust = FALSE,
-                                 method = "BH",
-                                 N = 1000)
+# tissue.odds.ratios.null = sig_pathway_int_null(sigs.input = PCAWG.full.subset.ann.pathways,
+#                                  pathways.input = PCAWG.pathways.tissues,
+#                                  interaction_function = get_sig_path_assocs, 
+#                                  path.min.tissues = 30,
+#                                  p.val.threshold = 0.05,
+#                                  p.adjust = FALSE,
+#                                  method = "BH",
+#                                  N = 1000)
+# 
+# saveRDS(tissue.odds.ratios.null, file = file.path(out.dir, "PCAWG.sig.path.OR.nulls.RDS"))
+tissue.odds.ratios.null = readRDS(file = file.path(out.dir, "PCAWG.sig.path.OR.nulls.RDS"))
 ```
 
 ```{r}
 quant = 0.95
-tissue.quantiles = list()
-
-for (tissue in names(tissue.odds.ratios.null)) {
-    
-    
-    tissue.elems = get_tissue_pathway_activities(tissue,
-                                                 PCAWG.full.subset.ann.pathways,
-                                                 PCAWG.pathways.tissues)
-    
-    zero.mat = matrix(0, ncol = ncol(tissue.elems$paths),
-                      nrow = ncol(tissue.elems$sigs),
-                      dimnames = list(colnames(tissue.elems$sigs), 
-                                      sub("-", ".", sub(" ", ".", colnames(tissue.elems$paths) ) ) ) )
-    
-    quantiles.mat = do.call(rbind, 
-                            lapply(tissue.odds.ratios.null[[tissue]], function(x) {
-                                if(length(x) == 0) {
-                                    return(as.vector(zero.mat))
-                                } else {
-                                    out = zero.mat
-                                    out[rownames(x),colnames(x)] = out[rownames(x),colnames(x)] +
-                                        as.matrix(x)
-                                    return(as.vector(unlist(out)))
-                                }
-                                
-                            }
-                            ) )
-    quants = apply(quantiles.mat, MARGIN = 2, function(x)
-        quantile(abs(x), probs = quant))    
-    
-    out = zero.mat + matrix(quants, nrow = nrow(zero.mat), ncol = ncol(zero.mat))
-    
-    tissue.quantiles[[tissue]] = out
-}
+tissue.OR.quantiles = get_quants_from_null(tissue.odds.ratios.null, 
+                                           PCAWG.full.subset.ann.pathways,
+                                           PCAWG.pathways.tissues, 
+                                           quant)
 ```
 
 
@@ -314,7 +332,7 @@ tissue.odds.ratio.null.adjusted = setNames(
            function(tissue) {
                observed = tissue.odds.ratio.unadjusted[[tissue]]
                colnames(observed) = sub("-", ".", sub(" ", ".", colnames(observed) ) )
-               nm = tissue.odds.ratios.null[[tissue]]
+               nm = tissue.OR.quantiles[[tissue]]
                nm = observed[rownames(observed), colnames(observed)]
                
                observed[abs(observed) < nm] = 0
@@ -332,18 +350,20 @@ for (tissue in names(tissue.odds.ratio.null.adjusted)) {
         print(int.heatmap)
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
-                                    paste0("PCAWG_", tissue, "_sig_pathway_unadjusted.dotplot.png")),
+                                    paste0("PCAWG_", tissue, "_sig_pathway_null_adjusted.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
 ```
 
 ```{r}
-pp.odds.ratio.unadjusted = plot_all_counts(tissue.odds.ratio.null.adjusted, threshold = 0.2, psize = 5)
+pp.odds.ratio.null.adjusted = plot_all_counts(tissue.odds.ratio.null.adjusted, 
+                                              threshold = 0.2, psize = 5,
+                                              expand.mult = c(0.13, 0.13))
 
 ggsave(plot = pp.odds.ratio.unadjusted,
                filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
-                                    "PCAWG_summarized_sig_pathway_unadjusted.dotplot.pdf"),
+                                    "PCAWG_summarized_sig_pathway_null_adjusted.dotplot.pdf"),
                height = 2.4, width = 3.4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 ```
 
@@ -386,16 +406,63 @@ tissue.lm.coefs.mats.log = sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pa
                                  interaction_function = get_sig_path_lms,
                                  robust = FALSE,
                                  path.min.tissues = 30,
-                                 p.val.threshold = 0.1,
-                                 p.adjust = TRUE,
+                                 p.val.threshold = 0.05,
+                                 p.adjust = FALSE,
                                  method = "BH",
                                  sig.log = TRUE,
                                  path.to.sig = TRUE)
+```
 
+### Setting the null model for the LM for sig ~ path
+
+```{r, echo = FALSE, include=FALSE}
+# tissue.lm.ratios.null = sig_pathway_int_null(sigs.input = PCAWG.full.subset.ann.pathways,
+#                                  pathways.input = PCAWG.pathways.tissues,
+#                                  interaction_function = get_sig_path_lms, 
+#                                  robust = FALSE,
+#                                  path.min.tissues = 30,
+#                                  p.val.threshold = 0.05,
+#                                  p.adjust = FALSE,
+#                                  method = "BH",
+#                                  sig.log = TRUE,
+#                                  path.to.sig = TRUE,
+#                                  N = 1000)
+# 
+# saveRDS(tissue.lm.ratios.null, file = file.path(out.dir, "PCAWG.sig.path.lm.nulls.RDS"))
+tissue.lm.ratios.null = readRDS(file = file.path(out.dir, "PCAWG.sig.path.lm.nulls.RDS"))
+```
+
+```{r}
+quant = 0.95
+tissue.lm.quantiles = get_quants_from_null(tissue.lm.ratios.null,
+                                           PCAWG.full.subset.ann.pathways,
+                                           PCAWG.pathways.tissues, 
+                                           quant)
+```
+
+### Applying the filter
+
+```{r}
+tissue.lm.null.adjusted = setNames(
+    lapply(names(tissue.lm.coefs.mats.log),
+           function(tissue) {
+               observed = tissue.lm.coefs.mats.log[[tissue]]
+               colnames(observed) = sub("-", ".", sub(" ", ".", colnames(observed) ) )
+               nm = tissue.lm.quantiles[[tissue]]
+               nm = observed[rownames(observed), colnames(observed)]
+               
+               observed[abs(observed) < nm] = 0
+               return(observed)
+           }
+    ), names(tissue.lm.coefs.mats.log) )
+```
+
+
+```{r}
 for (tissue in abundant.tissues) {
     cat(tissue, "\n")
-    if (any(abs(tissue.lm.coefs.mats.log[[tissue]]) > 0) ) {
-        int.heatmap = ggheatmap_wrapper(tissue.lm.coefs.mats.log[[tissue]],
+    if (any(abs(tissue.lm.null.adjusted[[tissue]]) > 0) ) {
+        int.heatmap = ggheatmap_wrapper(tissue.lm.null.adjusted[[tissue]],
                                         title = tissue)
 
         ggsave(plot = int.heatmap,
@@ -439,76 +506,23 @@ for (tissue in abundant.tissues) {
 #### Summarizing the regression of signatures ~ pathways
 
 ```{r, fig.width=6, fig.height=4, warning= FALSE}
-pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 5)
+pp.logged = plot_all_counts(tissue.lm.null.adjusted, threshold = 0.2, psize = 4.5,
+                            expand.mult = c(0.03, 0.03))
 print(pp.logged)
 
-ggsave(plot = pp.logged,
-               filename = file.path(fig.dir, "pathway_to_signature",
-                                    "by_tissues", "lm_log",
-                                    "PCAWG_logged_summarized_OLS.png"),
-               height = 2.3, width = 2.9, bg = "white")
+# ggsave(plot = pp.logged,
+#                filename = file.path(fig.dir, "pathway_to_signature",
+#                                     "by_tissues", "lm_log",
+#                                     "PCAWG_logged_summarized_OLS.png"),
+#                height = 2.3, width = 2.9, bg = "white")
 
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature",
                                     "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_path_to_sigs.pdf"),
-               height = 2.3, width = 2.9, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+               height = 2.7, width = 4.4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 
 ```
 
-
-<!-- ```{r, fig.width=6, fig.height=4, warning= FALSE} -->
-<!-- pp.logged.excl.melanoma = plot_all_counts( -->
-<!--     tissue.lm.coefs.mats.log[setdiff(names(tissue.lm.coefs.mats.log), "Skin_Melanoma")], -->
-<!--     threshold = 0.2, psize = 5) -->
-<!-- print(pp.logged.excl.melanoma) -->
-
-<!-- ggsave(plot = pp.logged.excl.melanoma, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature",  -->
-<!--                                     "by_tissues", "lm_log",  -->
-<!--                                     "PCAWG_logged_summarized_OLS_excl_melanoma_path_to_sigs.png"), -->
-<!--                height = 2, width = 2.4, bg = "white") -->
-
-<!-- ggsave(plot = pp.logged.excl.melanoma, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature",  -->
-<!--                                     "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_excl_melanoma_path_to_sigs.pdf"), -->
-<!--                height = 6, width = 8, bg = "white", device = cairo_pdf, family = "DejaVu Sans") -->
-
-<!-- ``` -->
-<!-- We can look at some select interactions. E.g. tissues where the interaction -->
-<!-- between NOTCH and Aging is observed.  -->
-
-<!-- ```{r} -->
-<!-- NOTCH.Aging = summarize_int_mat(tissue.lm.coefs.mats.log)["Ageing", "NOTCH"] -->
-<!-- cat(gsub(",", ", ", NOTCH.Aging)) -->
-<!-- ``` -->
-
-<!-- NOTCH and SBS40 -->
-
-<!-- ```{r} -->
-<!-- NOTCH.SBS40 = summarize_int_mat(tissue.lm.coefs.mats.log)["SBS40", "NOTCH"] -->
-<!-- cat(gsub(",", ", ", NOTCH.SBS40)) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- WNT.SBS8 = summarize_int_mat(tissue.lm.coefs.mats.log)["SBS8", "WNT"] -->
-<!-- cat(gsub(",", ", ", WNT.SBS8)) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- TP53.Ageing = summarize_int_mat(tissue.lm.coefs.mats.log)["Ageing", "TP53"] -->
-<!-- cat(gsub(",", ", ", TP53.Ageing)) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- TP53.ROS = summarize_int_mat(tissue.lm.coefs.mats.log)["ROS", "TP53"] -->
-<!-- cat(gsub(",", ", ", TP53.ROS)) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- TP53.HR = summarize_int_mat(tissue.lm.coefs.mats.log, pos.ints = FALSE)["HR", "TP53"] -->
-<!-- cat(gsub(",", ", ", TP53.HR)) -->
-<!-- ``` -->
 
 ### Case inspection of melanoma
 
@@ -596,16 +610,63 @@ tissue.log.coefs.mats.log = sig_pathway_int(sigs.input = PCAWG.full.subset.ann.p
                                  pathways.input = PCAWG.pathways.tissues,
                                  interaction_function = get_sig_path_lms,
                                  path.min.tissues = 30,
-                                 p.val.threshold = 0.1,
-                                 p.adjust = TRUE,
+                                 p.val.threshold = 0.05,
+                                 p.adjust = FALSE,
                                  method = "BH",
                                  sig.log = TRUE,
                                  robust = FALSE,
                                  path.to.sig = FALSE)
 
+```
 
+### Null model for glm(pathway ~ signature)
+
+
+```{r, echo = FALSE, include=FALSE, warning = FALSE}
+tissue.glm.ratios.null = sig_pathway_int_null(sigs.input = PCAWG.full.subset.ann.pathways,
+                                 pathways.input = PCAWG.pathways.tissues,
+                                 interaction_function = get_sig_path_lms,
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.05,
+                                 p.adjust = FALSE,
+                                 method = "BH",
+                                 sig.log = TRUE,
+                                 robust = FALSE,
+                                 path.to.sig = FALSE,
+                                 N = 1000)
+
+saveRDS(tissue.glm.ratios.null, file = file.path(out.dir, "PCAWG.sig.path.glm.nulls.RDS"))
+tissue.glm.ratios.null = readRDS(file = file.path(out.dir, "PCAWG.sig.path.glm.nulls.RDS"))
+```
+
+```{r}
+quant = 0.95
+tissue.glm.quantiles = get_quants_from_null(tissue.glm.ratios.null,
+                                           PCAWG.full.subset.ann.pathways,
+                                           PCAWG.pathways.tissues, 
+                                           quant)
+```
+
+
+```{r}
+tissue.glm.null.adjusted = setNames(
+    lapply(names(tissue.log.coefs.mats.log),
+           function(tissue) {
+               observed = tissue.log.coefs.mats.log[[tissue]]
+               colnames(observed) = sub("-", ".", sub(" ", ".", colnames(observed) ) )
+               nm = tissue.glm.ratios.null[[tissue]]
+               nm = observed[rownames(observed), colnames(observed)]
+               
+               observed[abs(observed) < nm] = 0
+               return(observed)
+           }
+    ), names(tissue.log.coefs.mats.log) )
+```
+
+
+```{r}
 for (tissue in abundant.tissues) {
-    if (any(abs(tissue.log.coefs.mats.log[[tissue]]) > 0) ) {
+    if (any(abs(tissue.glm.null.adjusted[[tissue]]) > 0) ) {
         cat(tissue, "\n")
         int.heatmap = ggheatmap_wrapper(tissue.log.coefs.mats.log[[tissue]],
                                         title = tissue)
@@ -613,7 +674,7 @@ for (tissue in abundant.tissues) {
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir, "signature_to_pathway",
                                     "by_tissues", "log_log",
-                                    paste0("PCAWG_", tissue, "_path_tilde_sig.dotplot.png")),
+                                    paste0("PCAWG_", tissue, "_path_tilde_sig.glm.null.adjusted.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
@@ -623,14 +684,14 @@ for (tissue in abundant.tissues) {
 #### Summarizing the regression of pathways ~ signatures
 
 ```{r}
-pp.log.log = plot_all_counts(tissue.log.coefs.mats.log, threshold = 0.1, psize = 6,
-                             expand.mult = c(0.13, 0.13))
+pp.log.log = plot_all_counts(tissue.glm.null.adjusted, threshold = 0.1, psize = 5,
+                             expand.mult = c(0.05, 0.05))
 print(pp.log.log)
 
 ggsave(plot = pp.log.log,
                filename = file.path(fig.dir, "signature_to_pathway",
                                     "by_tissues", "log_log",
-                                    "PCAWG_logged_summarized.png"),
+                                    "PCAWG_logged_glm_null_adjusted_summarized.png"),
                height = 1.15, width = 1.6, bg = "white")
 ```
 
@@ -638,16 +699,16 @@ ggsave(plot = pp.log.log,
 ### Three summaries together
 
 ```{r}
-pp.PCAWG.combined.summaries = ggarrange(pp.odds.ratio.unadjusted + ggtitle("Co-occurrence"), 
+pp.PCAWG.combined.summaries = ggarrange(pp.odds.ratio.null.adjusted + ggtitle("Co-occurrence"), 
           pp.logged + ggtitle("lm(signature ~ pathway)"), 
           pp.log.log + ggtitle("glm(pathway ~ signature)"), 
-          widths = c(1, 2, 0.6),
-          heights = c(1, 1, 0.4),
-          ncol = 1)
+          # widths = c(0.5, 0.7, 12),
+          heights = c(1, 0.9, 1),
+          nrow = 3)
 
 pp.PCAWG.combined.summaries = annotate_figure(
     pp.PCAWG.combined.summaries, top = text_grob("PCAWG signature-pathway analysis summaries", 
-               color = "darkblue", face = "bold", size = 11))
+               color = "black", face = "bold", size = 11))
 
 ggsave(plot = pp.PCAWG.combined.summaries,
                filename = file.path(fig.dir, "PCAWG_combined_summaries_sig_pathway.pdf"),
